--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section class="tentang" id="tentang">
     <h2 class="section-title">Tentang Kami</h2>
     <div class="tentang-content">
-      <img class="tentang-image" src="album/IMG_20251213_211414\ \(1\).jpg">
+      <img class="tentang-image" src="album/upacara.jpg">
       <div class="tentang-text">
         <h3>Siapa Kami ?</h3>
         <p>Kami adalah XII RPL 2, kelas yang isinya ngoding, mikir keras, ketawa bareng, dan kadang debat gara-gara satu error kecil. Di sini kami belajar bikin program, dan nyari solusi bareng-bareng. Bagi kami, error itu bukan musuh, tapi tanda kalau kami lagi belajar. Dari nol sampai jadi, dari bingung sampai paham, semua dijalanin bareng sebagai satu tim.</p>
@@ -158,7 +158,7 @@
       <div class="album-grid-top">
         <div class="album-card">
           <div class="album-card-title">Upacara 17 Agustus</div>
-          <img class="album-card-image" src="album/IMG_20251213_211414\ \(1\).jpg">
+          <img class="album-card-image" src="album/upacara.jpg">
         </div>
         
         <div class="album-card">
@@ -218,3 +218,4 @@
 </body>
 
 </html>
+
