--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section class="tentang" id="tentang">
     <h2 class="section-title">Tentang Kami</h2>
     <div class="tentang-content">
-      <img class="tentang-image" src="album/upacara.jpg">
+      <div class="tentang-image"></div>
       <div class="tentang-text">
         <h3>Siapa Kami ?</h3>
         <p>Kami adalah XII RPL 2, kelas yang isinya ngoding, mikir keras, ketawa bareng, dan kadang debat gara-gara satu error kecil. Di sini kami belajar bikin program, dan nyari solusi bareng-bareng. Bagi kami, error itu bukan musuh, tapi tanda kalau kami lagi belajar. Dari nol sampai jadi, dari bingung sampai paham, semua dijalanin bareng sebagai satu tim.</p>
@@ -218,4 +218,5 @@
 </body>
 
 </html>
+
 
