--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Paprika&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="ass.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
   <!-- Header -->
@@ -218,6 +218,7 @@
 </body>
 
 </html>
+
 
 
 
